agregue el enviar ocdigo otp para cambiar la contraseña desde configuracion, en java script, la logica en python

--- a/templates/index/tuercabarralateral.html
+++ b/templates/index/tuercabarralateral.html
@@ -6,6 +6,8 @@
     <title>Configuración - Mi Foro</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/estilohomeoinicio.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/configuracion.css') }}">
+     <meta name="csrf-token" content="{{ csrf_token() }}">
+</head>
 <body>
     <main class="contenido-principal">
         <div class="contenedor-configuracion">
