corregi el erro de la barra lateral que no funconaba agregando la id del boton.

--- a/templates/index/tuercabarralateral.html
+++ b/templates/index/tuercabarralateral.html
@@ -48,7 +48,7 @@
                         <h2>Perfil de Usuario</h2>
                         <div class="campo-form">
                             <label for="nombre-usuario">Nombre de usuario:</label>
-                            <input type="text" id="nombre-usuario" name="nombre_usuario" value="{{ current_user.nom_usu }}">
+                            <input type="text" id="nombre-usuario" name="nombre_usuario" value="{{ current_user.nom_usu }}" readonly>
                         </div>
                         <div class="campo-form">
                             <label for="email">Correo electrónico:</label>
