--- a/templates/index/ComentariosParaTodos.html
+++ b/templates/index/ComentariosParaTodos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Comentarios con Menú</title>
+  <title>Comentarios</title>
   <link rel="stylesheet" href="/static/css/indexcajacomentario.css" />
   <link rel="stylesheet" href="/static/css/barralateral.css"/>
   <link rel="stylesheet" href="/static/css/ApartadoFuentes.css"/>
@@ -43,10 +43,10 @@
       <li data-orden="mas-likes">Más likes</li>
       <li data-orden="menos-likes">Menos likes</li>
     </ul>
-</section>
+<!-- </section>
       <a href="/templates/index/ComentariosParaTodos.html">Comentarios</a>
       <a href="/fuentes/materias/1">Fuentes</a>
-    </section>
+    </section> -->
 
 <section class="caja-comentario">
       <form id="commentForm" autocomplete="off">
