--- a/templates/index/ComentariosParaTodos.html
+++ b/templates/index/ComentariosParaTodos.html
@@ -43,10 +43,10 @@
       <li data-orden="mas-likes">Más likes</li>
       <li data-orden="menos-likes">Menos likes</li>
     </ul>
-<!-- </section>
-      <a href="/templates/index/ComentariosParaTodos.html">Comentarios</a>
-      <a href="/fuentes/materias/1">Fuentes</a>
-    </section> -->
+</section>
+      <!-- <a href="/templates/index/ComentariosParaTodos.html">Comentarios</a>
+      <a href="/fuentes/materias/1">Fuentes</a> -->
+</section>
 
 <section class="caja-comentario">
       <form id="commentForm" autocomplete="off">
