--- a/templates/index/ComentariosParaTodos.html
+++ b/templates/index/ComentariosParaTodos.html
@@ -50,8 +50,8 @@
 
 <section class="caja-comentario">
       <form id="commentForm" autocomplete="off">
-        <input type="text" id="titulo" name="titulo" placeholder="Título de la pregunta" required>
-        <textarea id="comentario" name="comentario" placeholder="Escribe tu comentario..." required></textarea>
+        <input type="text" id="titulo" name="titulo" placeholder=" Tema de su comentario" required>
+        <textarea id="comentario" name="comentario" placeholder="Escriba su comentario..." required></textarea>
         <input type="hidden" id="id_mat" name="id_mat" value="{{ id_mat }}">
         <button type="submit">Enviar</button>
         <div class="comentario" data-timestamp="1691952000" data-likes=""></div>
