--- a/templates/index/indexiniciarsesion.html
+++ b/templates/index/indexiniciarsesion.html
@@ -35,7 +35,7 @@
           <a href="/cambiar">¿OLVIDÓ SU CONTRASEÑA? RECUPERAR</a>
         </div>
                 <div class="links">
-          <a href="#">Entrar como invitado</a>
+          <a href='/entrar_como_invitado'>Entrar como invitado</a>
         </div>
 
         <button type="submit" id="init">INICIAR</button>
