comentarios en perfil

--- a/templates/index/indexusuario.html
+++ b/templates/index/indexusuario.html
@@ -35,12 +35,17 @@
     <div class="action-buttons">
       <button>Editar perfil</button>
     </div>
-    <div class="caja-comentarios1">
-      <p id="comentarios">Mis comentarios. . .</p>
+    <div class="caja-comentarios">
+        <h3>Mis Comentarios Recientes</h3>
+        <div id="mis-comentarios" class="comments-list">
+          <!-- Aquí se cargarán los comentarios del usuario -->
+          <p>Cargando tus comentarios...</p>
+        </div>
     </div>
   </div>
   
-     <script src="/static/js/comentarios.js"></script>
-    <script src="/static/js/barralateral.js"></script>
+  <script src="/static/js/perfil.js"></script>
+  <script src="/static/js/comentarios.js"></script>
+  <script src="/static/js/barralateral.js"></script>
 </body>
 </html>
