modal (intento) para perfilk

--- a/templates/index/indexusuario.html
+++ b/templates/index/indexusuario.html
@@ -30,10 +30,10 @@
   <div class="profile-container">
     <div class="avatar"></div>
     <div class="user-info">
-      <h2>Nombre de Usuario</h2>
+      <h2>{{ current_user.nom_usu }}</h2>
     </div>
     <div class="action-buttons">
-      <button>Editar perfil</button>
+      <button id="openModalBtn">Editar perfil</button>
     </div>
     <div class="caja-comentarios">
         <h3>Mis Comentarios Recientes</h3>
