Ventana emergente, no logro solucionarla.

--- a/templates/index/indexusuario.html
+++ b/templates/index/indexusuario.html
@@ -43,7 +43,18 @@
         </div>
     </div>
   </div>
-  
+
+  <div id="modal1" class="profile-modal">
+      <div class="content-modal">
+        <button class="closeModalBtn">&times;</button>
+        <div class="avatar-modal"></div>
+          <div class="user-info-modal">
+          <h2>{{ current_user.nom_usu }}</h2>
+      </div>
+    </div>
+  </div>
+
+  <script src="/static/js/modalperfil.js"></script>  
   <script src="/static/js/perfil.js"></script>
   <script src="/static/js/comentarios.js"></script>
   <script src="/static/js/barralateral.js"></script>
