--- a/static/css/usuario.css
+++ b/static/css/usuario.css
@@ -139,6 +139,27 @@ body {
     margin-top: 0.5em;
     margin-bottom: 1em;
 }
+#modal1{
+  display: none; /* Oculto por defecto */
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5); /* efecto de fondo */
+}
+
+.content-modal{
+  background-color: #fff;
+  margin: 15% auto;
+  padding: 20px;
+  border-radius: 10px;
+  width: 50%;
+  max-width: 400px;
+  text-align: center;
+  box-shadow: 0 5px 10px rgba(0,0,0,0.3);
+}
 
 
 /* --- Responsive tablet --- */
@@ -228,61 +249,8 @@ body {
         padding: 0.8em;
         font-size: 0.9rem;
     }
-}
-
-.modal {
-    display: none; /* Oculto por defecto */
-    position: fixed; /* Mantiene el modal en su lugar */
-    z-index: 1; /* Se superpone a otros elementos */
-    left: 0;
-    top: 0;
-    width: 100%; /* Cubre toda la pantalla */
-    height: 100%;
-    overflow: auto; /* Permite scroll si el contenido es muy largo */
-    background-color: rgb(0,0,0); /* Fondo oscuro */
-    background-color: rgba(0,0,0,0.4); /* Fondo semi-transparente */
-    display: flex; /* Para centrar el contenido */
-    justify-content: center;
-    align-items: center;
-}
-
-/* Contenido del modal */
-.modal-content {
-    background-color: #fefefe;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Ancho del modal, puedes cambiarlo */
-    max-width: 500px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-    animation-name: animatetop;
-    animation-duration: 0.4s
-}
-
-/* Animación para que aparezca desde arriba */
-@keyframes animatetop {
-    from {top: -300px; opacity: 0}
-    to {top: 0; opacity: 1}
-}
-
-/* Botón para cerrar */
-.close-btn {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close-btn:hover,
-.close-btn:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-
     .perfil-comentario-header{
     width: 100%;
 }
 
-
-
+}
