--- a/templates/index/indexusuario.html
+++ b/templates/index/indexusuario.html
@@ -47,9 +47,27 @@
   <div id="modal1" class="profile-modal">
       <div class="content-modal">
         <button class="closeModalBtn">&times;</button>
-        <div class="avatar-modal"></div>
+        <div class="avatar" id="modal-avatar"></div>
+        <select name="miSelect" id="miSelectId">
+          <option value="opcion1">Opción 1</option>
+          <option value="opcion2">Opción 2</option>
+          <option value="opcion3">Opción 3</option>
+          </select>
           <div class="user-info-modal">
-          <h2>{{ current_user.nom_usu }}</h2>
+          <span class="texto-modal"><h2>{{ current_user.nom_usu }}</h2></span>
+          <form id="loginForm" autocomplete="off">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+          <br>
+        <label for="email" class="texto-modal">nuevo nombre de usuario</label>
+        <input type="email" id="email" name="email" placeholder="INGRESE SU CORREO ELECTRONICO" required />
+          <br>
+        <label for="password" class="texto-modal">Contraseña</label>
+        <input type="password" id="password" name="password" placeholder="CONTRASEÑA" required />
+
+
+        <button type="submit" id="init">Cambiar</button>
+        <div id="mensaje" class="mensaje"></div>
+      </form>
       </div>
     </div>
   </div>
