primer procesito de editar perfil (avaar) (ya cambia el valor del avatar en la base de datos, ahora falta la logica para representarlo como imagen)

--- a/templates/index/indexusuario.html
+++ b/templates/index/indexusuario.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/static/css/barralateral.css">
     <meta name="usuario-id" content="{{ current_user.id or 'null' }}">
     <meta name="usuario-rol" content="{{ current_user.rol or 'anonimo' }}">
-  
+    <meta name="csrf-token" content="{{ csrf_token() }}">
+
 </head>
 <body>
 <div id="toggle">
@@ -49,7 +50,7 @@
         <button class="closeModalBtn">&times;</button>
 
         <div class="avatar-modal" id="avatarPreview"></div>
-        <select name="miSelect" id="avatarSelect">
+        <select name="miSelect" id="avatarSelect" onchange="MostrarAvatar()">
           <option value=1>Opción 1</option>
           <option value=2>Opción 2</option>
           <option value=3>Opción 3</option>
