--- a/templates/index/indexcentralayuda.html
+++ b/templates/index/indexcentralayuda.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Centro de Ayuda - CET4</title>
-  <link rel="stylesheet" href="static/css/Centralayuda.css" />
+  <link rel="stylesheet" href="/static/css/Centralayuda.css"/>
 </head>
 <body>
   <header class="header">
@@ -29,11 +29,13 @@
     </section>
 
     <section class="grid">
+      <a href="#" class="card-link">
       <article class="card">
         <img src="/static/utils/img/anuncio.png" alt="Ícono de Anuncios">
         <h2>Anuncios</h2>
         <p>Esté al tanto de nuevas noticias</p>
       </article>
+      </a>
 
       <article class="card">
         <img src="/static/utils/img/terminos_condiciones.png" alt="Ícono de Reglas">
