--- a/static/css/barralateral.css
+++ b/static/css/barralateral.css
@@ -86,6 +86,12 @@ a.separador3{
     margin: 0;
 }
 
+.casa1:hover,.campana2:hover,.soporte3:hover,.grupo4:hover,.opcion5:hover,.usuario:hover {
+    transform: scale(1.2);
+    filter: brightness(1.4);
+    transition: transform 0.4s ease, filter 0.2s ease;
+}
+
 @media (max-width: 1024px) {
     .elcostado {
         width: 15%;
