--- a/static/css/usuario.css
+++ b/static/css/usuario.css
@@ -160,6 +160,46 @@ body {
   min-height: 400px;       /* asegurás altura mínima */
   text-align: center;
   box-shadow: 0 5px 15px rgba(0,0,0,0.4);
+  display: flex;
+flex-direction: column;
+}
+
+.texto-modal{
+    color:black;
+}
+
+.modal-avatar{
+    background-color: #0c1b32;
+}
+
+.avatar-modal {
+  width: 12rem;
+  height: 12rem;
+  border-radius: 50%;
+  margin: 0 auto 20px auto;
+  background-size: cover;
+  background-position: center;
+  background-color: #d900ff; /* color por defecto */
+  justify-content: top;
+  align-items: left;
+}
+.closeModalBtn{
+    width: 2.5rem;
+    height: 2rem;
+    font-size: 1.5rem;
+}
+
+.avatar-select{
+    width: 5rem;
+    height: 2.5rem;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    margin-left: 45%;
+    margin-top: 1em;
+}
+.user-info-modal{
+    margin-top: 2em;
+    
 }
 
 
@@ -257,20 +297,4 @@ body {
 
 }
 
-.texto-modal{
-    color:black;
-}
 
-.modal-avatar{
-    background-color: #0c1b32;
-}
-
-.avatar-modal {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  margin: 0 auto 20px auto;
-  background-size: cover;
-  background-position: center;
-  background-color: #d900ff; /* color por defecto */
-}
