hipervinculo crear cuenta a inicio sesion

--- a/static/css/estilocrearcuenta.css
+++ b/static/css/estilocrearcuenta.css
@@ -208,3 +208,13 @@ button:hover {
     display: none;
   }
 }
+
+.iniciosesion a{
+
+  color: #76baff;
+  
+
+}
+.iniciosesion{
+  text-align: center;
+}
