--- a/templates/index/indexcrearcuenta.html
+++ b/templates/index/indexcrearcuenta.html
@@ -44,6 +44,7 @@
         <button type="submit">REGISTRARSE</button>
       </form>
       <p class="recuperar">¿Olvidó su contraseña? <a href="#">RECUPERAR</a></p>
+      <p class="iniciosesion"> Ya tiene una cuenta? <a href="/templates/index/indexiniciarsesion.html">INICIAR SESIÓN</a> </p>
     </section>
   </main>
 
