--- a/static/css/usuario.css
+++ b/static/css/usuario.css
@@ -60,6 +60,8 @@ body {
 .avatar {
    
     background-color: #d900ff;
+    background-size: cover;
+    background-position: center;
     width: 15rem;
     height: 15rem;
     border-radius: 50%;
@@ -197,12 +199,34 @@ flex-direction: column;
     margin-left: 45%;
     margin-top: 1em;
 }
-.user-info-modal{
-    margin-top: 2em;
+
+.login-form1{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.user-info-modal1{
+    display:flex;
+    flex-direction: column;
+    width: 20rem;
+
+}
+.user-info-modal2{
+    display:flex;
+    flex-direction: column;
+    width: 20rem;
+    margin-top: 1em;
+
     
 }
-
-
+#init{
+    border-radius: 10px;
+    width: 5rem;
+    height: 2rem;
+    border: 1px solid #ccc;
+    margin-top: 1.5em;
+}
 
 /* --- Responsive tablet --- */
 @media (max-width: 1024px) {
@@ -294,7 +318,12 @@ flex-direction: column;
     .perfil-comentario-header{
     width: 100%;
 }
-
+.user-info-modal1{
+    width: 100%;
+}
+.user-info-modal2{
+    width: 100%;  
+}
 }
 
 
