--- a/templates/index/indexusuario.html
+++ b/templates/index/indexusuario.html
@@ -60,8 +60,8 @@
           <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
           <br>
           <div class="user-info-modal1">
-          <label for="email" class="texto-modal">nuevo nombre de usuario</label>
-          <input type="email" id="email" name="email" placeholder="INGRESE SU CORREO ELECTRONICO" required />
+          <label for="new-name" class="texto-modal">Nuevo nombre de usuario</label>
+          <input type="text" id="new-name" name="new-name" placeholder="Ingrese su nuevo nombre de usuario" required />
           </div>
           <div class="user-info-modal2">
           <label for="password" class="texto-modal">Contraseña</label>
@@ -75,7 +75,6 @@
   </div>
   <script src="/static/js/modalperfil.js"></script>  
   <script src="/static/js/perfil.js"></script>
-  <script src="/static/js/comentarios.js"></script>
   <script src="/static/js/barralateral.js"></script>
 </body>
 </html>
