--- a/templates/index/indexcentralayuda.html
+++ b/templates/index/indexcentralayuda.html
@@ -31,7 +31,7 @@
     <section class="grid">
       <article class="card">
         <img src="/static/utils/img/anuncio.png" alt="Ícono de Anuncios">
-        <h2>Anuncios</h2>
+        <a href="/templates/index/indexanuncios.html">Anuncios</a>
         <p>Esté al tanto de nuevas noticias</p>
       </article>
 
@@ -61,7 +61,7 @@
 
       <article class="card">
         <img src="/static/utils/img/nosotros_lol.png" alt="Ícono de Nosotros" >
-        <a href="/templates/index/indexnosotros.html">nosotros</a>
+        <a href="/templates/index/indexnosotros.html">Nosotros</a>
         <p>Los invitamos a conocernos un poco mejor</p>
       </article>
 
