--- a/static/css/dprogramacion.css
+++ b/static/css/dprogramacion.css
@@ -1,10 +1,12 @@
 /* Estilo general */
 body {
     font-family: 'Segoe UI', sans-serif;
-    background-color: #0e1c36;
     color: #fff;
     margin: 0;
     padding: 0;
+    background: linear-gradient(to top, #020c25 0%, #082c54 50%);
+    width: 100%;
+    min-height: 100vh;
 }
 
 /* empieza la bARra de busqueda  */
