--- a/static/css/estilohomeoinicio.css
+++ b/static/css/estilohomeoinicio.css
@@ -9,6 +9,9 @@ body {
     background-color: #082c54;
     font-family: sans-serif;
     overflow-x: hidden;
+    background: linear-gradient(to top, #020c25 0%, #082c54 50vh);
+    width: 100%;
+    min-height: 100vh;
 }
 
 ::placeholder {
@@ -22,7 +25,6 @@ body {
     align-items: center;
     justify-content: flex-start;
     padding: 10px 20px;
-    background-color: #082c54;
     position: fixed;
     top: 0;
     left: 0;
