--- a/static/css/indexcajacomentario.css
+++ b/static/css/indexcajacomentario.css
@@ -5,7 +5,9 @@
 }
 
 body {
-  background-color: #082c54;
+    background: linear-gradient(to top, #020c25 0%, #082c54 50%);
+    width: 100%;
+    min-height: 100vh;
 }
 h1 {
   font-family: Arial, Helvetica, sans-serif;
